--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,326 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+
+  padding: 0 var(--indent, 10px);
+
+  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  color: var(--text-color);
+
+  background-color: var(--bg-color);
+  background-image: url(../images/cover-image-dark.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.header {
+  position: relative;
+  
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  grid-template-columns: 1fr;
+  justify-content: space-between;
+  min-block-size: 100vb;
+  padding: var(--indent, 10px) 0;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  position: absolute;
+  
+  content: "";
+  inline-size: 25px;
+  block-size: 25px; 
+}
+
+.decorated-zone::before {
+  inset-block-end: var(--indent, 10px);
+  inset-inline-start: 0;
+  
+  border-block-end: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--accent-color);
+}
+
+.decorated-zone::after {
+  inset-block-start: var(--indent, 10px);
+  inset-inline-end: 0;
+  
+  border-block-start: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--accent-color);
+}
+
+/* .header__decor {
+  position: absolute;
+  inset-inline-end: 29px;
+  inset-block-start: 11px;
+
+  color: var(--accent-color);
+  font: inherit;
+  line-height: 138.889%;
+}
+
+.header__decor::after {
+  position: absolute;
+  inset-inline-end: -20px;
+  inset-block-start: 9px;
+  
+  display: block;
+  content: "";
+
+  inline-size: 7px;
+  block-size: 7px;
+  border-radius: 50%;
+
+  background-color: var(--accent-color);
+
+  box-shadow: 0 0 3px 3px var(--accent-color);
+} */
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: var(--indent, 10px);
+}
+
+.header__theme-menu-item {
+  color: var(--accent-color);
+  font: inherit;
+  line-height: 138.889%;
+}
+
+.header__theme-menu-button {
+  padding: 0 12px;
+
+  text-transform: lowercase;
+
+  background-color: transparent;
+
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--button-outline-hover);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid currentColor;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+
+  outline: 1px solid var(--accent-color);
+}
+
+.header__title {
+  color: var(--header-title);
+  font-family: inherit;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%;
+  text-shadow: 4px 4px 0px #FF0070;
+}
+
+.header__description {
+  justify-self: end;
+  align-self: center;
+  max-block-size: 117px;
+  inline-size: 355px;
+}
+
+.title-decor {
+  color: var(--bg-color);
+  font: inherit;
+  font-weight: 700;
+  line-height: 130%;
+
+  background-color: var(--accent-color);
+}
+
+.section {
+  display: grid;
+  gap: var(--big-indent, 20px);
+  
+  padding: 40px 0 var(--indent, 10px);
+}
+
+.section:last-child {
+  gap: var(--indent, 10px);
+  padding-block-end: 40px;
+}
+
+.section__title {
+  font: inherit;
+  font-weight: 700;
+  line-height: 130%;
+  color: var(--accent-color);
+}
+
+.section__content {
+  display: grid;
+  gap: var(--big-indent, 20px);
+}
+
+.section__subtitle {
+  font-size: 18px;
+}
+
+.section__caption {
+  font-weight: 400;
+}
+
+.section__paragraph {
+  padding-block-start: var(--indent, 10px);
+  
+  line-height: 130%;
+}
+
+.section__link {
+  text-decoration: none;
+  text-shadow: 2px 1px 0 var(--accent-color);
+
+  cursor: pointer;
+}
+
+.section__link:hover {
+  border-block-end: 1px solid currentColor;
+}
+
+.section__link:focus-visible {
+  outline: 1px solid currentColor;  
+}
+
+.section__pictures {
+  display: grid;
+  gap: var(--indent, 10px);
+}
+
+.section__image {
+  inline-size: 100%;
+  block-size: auto;
+}
+
+.footer {
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-block-size: 100vb;
+  padding: var(--indent, 10px) 0;
+}
+
+.footer__title {
+  color: var(--header-title);
+  font-family: inherit;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%;
+  text-shadow: 2px 2px 0px #FF0070;
+}
+
+@media (width >= 768px) {
+  .page {
+    padding: 0 var(--big-indent, 20px);
+  }
+  
+  .header {
+    padding: var(--big-indent, 20px) 0;
+  }
+
+  .decorated-zone::before {
+    inset-block-end: var(--big-indent, 20px);
+  }
+
+  .decorated-zone::after {
+    inset-block-start: var(--big-indent, 20px);
+  }
+
+  /* .header__decor {
+    inset-block-start: 21px;
+  } */
+
+  .header__title {
+    position: relative;
+    inset-inline-start: -20px;
+    
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__description {
+    inline-size: clamp(364px, 48vi, 491px);
+  }
+
+  .section {
+    padding: 60px 0 var(--big-indent, 20px);
+  }
+  
+  .section:nth-child(odd) {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section:nth-child(2) .section__title {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: var(--big-indent, 20px);
+  }
+
+  .section:last-child {
+    gap: var(--big-indent, 20px);
+    padding-block-end: 60px;
+  }
+
+  .section__pictures {
+    gap: var(--big-indent, 20px);
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 25.1vi 30.2vi 41.2vi;
+  }
+
+  .section__pictures img:first-child,
+  img:last-child {
+    grid-column-end: span 2;
+  }
+
+  .section__pictures img:nth-child(2),
+  img:nth-child(3) {
+    grid-row-end: span 2;
+  }
+  
+  .section__image {
+    block-size: 100%;
+    object-fit: cover;
+    object-position: center;   
+  }
+
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (width >= 1024px) {
+  
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+  }
+  
+  .header__theme-menu-list {
+    flex-direction: row;    
+  }
+
+  .section:nth-child(2) .section__content {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
