--- a/styles/style.css
+++ b/styles/style.css
@@ -36,26 +36,26 @@
   
   content: "";
   inline-size: 25px;
-  block-size: 25px; 
+  block-size: 25px;
 }
 
 .decorated-zone::before {
   inset-block-end: var(--indent, 10px);
   inset-inline-start: 0;
   
-  border-block-end: 1px solid var(--accent-color);
-  border-inline-start: 1px solid var(--accent-color);
+  border-block-end: 1px solid var(--accent-color-secondary);
+  border-inline-start: 1px solid var(--accent-color-secondary);
 }
 
 .decorated-zone::after {
   inset-block-start: var(--indent, 10px);
   inset-inline-end: 0;
   
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
+  border-block-start: 1px solid var(--accent-color-secondary);
+  border-inline-end: 1px solid var(--accent-color-secondary);
 }
 
-/* .header__decor {
+.header__decor {
   position: absolute;
   inset-inline-end: 29px;
   inset-block-start: 11px;
@@ -63,6 +63,7 @@
   color: var(--accent-color);
   font: inherit;
   line-height: 138.889%;
+  text-transform: uppercase;
 }
 
 .header__decor::after {
@@ -80,7 +81,7 @@
   background-color: var(--accent-color);
 
   box-shadow: 0 0 3px 3px var(--accent-color);
-} */
+}
 
 .header__theme-menu {
   justify-self: end;
@@ -90,11 +91,11 @@
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: var(--indent, 10px);
+  gap: 10px;
 }
 
 .header__theme-menu-item {
-  color: var(--accent-color);
+  color: var(--accent-color-secondary);
   font: inherit;
   line-height: 138.889%;
 }
@@ -107,6 +108,7 @@
   background-color: transparent;
 
   cursor: pointer;
+  appearance: none;
 }
 
 .header__theme-menu-button:hover {
@@ -120,17 +122,17 @@
 .header__theme-menu-button_active {
   pointer-events: none;
 
-  outline: 1px solid var(--accent-color);
+  outline: 1px solid var(--accent-color-secondary);
 }
 
 .header__title {
   color: var(--header-title);
   font-family: inherit;
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-size: var(--logo-size);
   font-style: normal;
   font-weight: 700;
   line-height: 82.5%;
-  text-shadow: 4px 4px 0px #FF0070;
+  text-shadow: 4px 4px 0px var(--accent-color-logo);
 }
 
 .header__description {
@@ -149,16 +151,16 @@
   background-color: var(--accent-color);
 }
 
-.section {
-  display: grid;
-  gap: var(--big-indent, 20px);
-  
-  padding: 40px 0 var(--indent, 10px);
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: var(--indent-m, 50px);
+  padding: var(--indent-s, 40px)  0;
 }
 
-.section:last-child {
-  gap: var(--indent, 10px);
-  padding-block-end: 40px;
+.section {
+  display: grid;
+  gap: 20px;  
 }
 
 .section__title {
@@ -170,7 +172,7 @@
 
 .section__content {
   display: grid;
-  gap: var(--big-indent, 20px);
+  gap: 20px;
 }
 
 .section__subtitle {
@@ -182,7 +184,7 @@
 }
 
 .section__paragraph {
-  padding-block-start: var(--indent, 10px);
+  padding-block-start: 10px;
   
   line-height: 130%;
 }
@@ -199,11 +201,10 @@
 }
 
 .section__link:focus-visible {
-  outline: 1px solid currentColor;  
+  outline: 1px solid currentColor;
 }
 
 .section__pictures {
-  display: grid;
   gap: var(--indent, 10px);
 }
 
@@ -225,103 +226,79 @@
 .footer__title {
   color: var(--header-title);
   font-family: inherit;
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-size: var(--logo-size);
   font-style: normal;
   font-weight: 700;
   line-height: 82.5%;
-  text-shadow: 2px 2px 0px #FF0070;
+  text-shadow: 2px 2px 0px var(--accent-color-logo);
 }
 
-@media (width >= 768px) {
-  .page {
-    padding: 0 var(--big-indent, 20px);
-  }
-  
-  .header {
-    padding: var(--big-indent, 20px) 0;
-  }
-
-  .decorated-zone::before {
-    inset-block-end: var(--big-indent, 20px);
-  }
-
-  .decorated-zone::after {
-    inset-block-start: var(--big-indent, 20px);
-  }
-
-  /* .header__decor {
+@media (width >= 768px) {   
+  .header__decor {
     inset-block-start: 21px;
-  } */
+  }
 
   .header__title {
     position: relative;
-    inset-inline-start: -20px;
-    
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    inset-inline-start: -20px;   
   }
 
   .header__description {
     inline-size: clamp(364px, 48vi, 491px);
   }
-
-  .section {
-    padding: 60px 0 var(--big-indent, 20px);
-  }
-  
-  .section:nth-child(odd) {
+    
+  .why,
+  .how__to {
     grid-template-columns: 1fr 2fr;
   }
 
-  .section:nth-child(2) .section__title {
+  .what .section__title {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: var(--big-indent, 20px);
+    gap: 20px;
   }
 
-  .section:last-child {
-    gap: var(--big-indent, 20px);
-    padding-block-end: 60px;
-  }
-
-  .section__pictures {
-    gap: var(--big-indent, 20px);
+  .section__pictures {    
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 25.1vi 30.2vi 41.2vi;
+    grid-template-rows: auto min(192px, 26vi) min(230px, 31vi) min(318px, 42vi);
   }
 
-  .section__pictures img:first-child,
-  img:last-child {
-    grid-column-end: span 2;
-  }
-
-  .section__pictures img:nth-child(2),
-  img:nth-child(3) {
-    grid-row-end: span 2;
+  .section__pictures .section__subtitle {
+    grid-column-end: span 3;
   }
   
   .section__image {
     block-size: 100%;
     object-fit: cover;
-    object-position: center;   
+    object-position: center;
   }
 
-  .footer__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  .section__image:nth-of-type(1),
+  .section__image:last-of-type {
+    grid-column-end: span 2;
   }
+
+  .section__image:nth-of-type(2),
+  .section__image:nth-of-type(3) {
+    grid-row-end: span 2;
+  } 
 }
 
 @media (width >= 1024px) {
-  
   .header__theme-menu {
     justify-self: center;
     align-self: start;
   }
   
   .header__theme-menu-list {
-    flex-direction: row;    
+    flex-direction: row;
   }
 
-  .section:nth-child(2) .section__content {
-    grid-template-columns: 1fr 1fr 1fr;
+  .what .section__content {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section__pictures {
+    grid-template-rows: auto min(260px, 26vi) min(315px, 31vi) min(428px, 42vi);
   }
 }
