моя попытка номер 3

--- a/styles/light.css
+++ b/styles/light.css
@@ -43,7 +43,7 @@
   }
 
   .page {
-    background-image: url(../images/cover-image.png);
+    background-image: url(../images/cover-image-light.png);
   }
 
   .theme_light .header__decor {
