--- a/styles/style.css
+++ b/styles/style.css
@@ -5,13 +5,14 @@
 
   /* padding: 0 var(--indent, 10px); */
 
-  font-family: IBM Plex Mono, Arial, Helvetica, sans-serif;
-  font-size: 18px;
+  font-family: var(--main-font-family, 'Courier New', Courier, monospace);
+  font-size: var(--main-font-size, 18px);
+  line-height: var(--main-line-height);
   font-style: normal;
   font-weight: 400;
   color: var(--text-color);
 
-  background-color: var(--bg-color);
+  background-color: var(--bg-color, gray);
   background-image: url(../images/cover-image-dark.png);
   background-size: cover;
   background-position: center;
@@ -26,7 +27,8 @@
   grid-template-rows: 1fr auto 1fr;
   grid-template-columns: 1fr;
   justify-content: space-between;
-  min-block-size: 100vb;
+  min-block-size: 668px;
+  block-size: 100vb;
   padding: var(--indent, 10px);
 }
 
@@ -62,7 +64,7 @@
 
   color: var(--accent-color);
   font: inherit;
-  line-height: 138.889%;
+  line-height: 138%;
   text-transform: uppercase;
 }
 
@@ -96,8 +98,7 @@
 
 .header__theme-menu-item {
   color: var(--accent-color-secondary);
-  font: inherit;
-  line-height: 138.889%;
+  font: inherit; 
 }
 
 .header__theme-menu-button {
@@ -145,8 +146,7 @@
 .title-decor {
   color: var(--bg-color);
   font: inherit;
-  font-weight: 700;
-  line-height: 130%;
+  font-weight: 700;  
 
   background-color: var(--accent-color);
 }
@@ -158,21 +158,16 @@
   padding: var(--indent-s, 40px)  var(--indent, 10px);
 }
 
-.section {
+.section,
+.section__content  {
   display: grid;
   gap: 20px;
 }
 
 .section__title {
   font: inherit;
-  font-weight: 700;
-  line-height: 130%;
+  font-weight: 700;  
   color: var(--accent-color);
-}
-
-.section__content {
-  display: grid;
-  gap: 20px;
 }
 
 .section__subtitle {
@@ -184,9 +179,7 @@
 }
 
 .section__paragraph {
-  padding-block-start: 10px;
-  
-  line-height: 130%;
+  padding-block-start: 10px;  
 }
 
 .section__link {
@@ -219,8 +212,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-block-size: 100vb;
-  padding: var(--indent, 10px) 0;
+  min-block-size: 668px;
+  block-size: 100vb;
+  padding: var(--indent, 10px);
 }
 
 .footer__title {
@@ -245,7 +239,7 @@
   }
 
   .header__description {
-    inline-size: clamp(364px, 48vi, 491px);
+    inline-size: max(364px, 47.4vi);
   }
     
   .why,
@@ -274,7 +268,7 @@
     object-position: center;
   }
 
-  .section__image:nth-of-type(1),
+  .section__image:first-of-type,
   .section__image:last-of-type {
     grid-column-end: span 2;
   }
@@ -293,6 +287,15 @@
   
   .header__theme-menu-list {
     flex-direction: row;
+  }
+
+  .header__description {
+    inline-size: max(491px, 47.4vi);
+  }
+
+  .why,
+  .how__to {
+    gap: 10px;
   }
 
   .what .section__content {
